--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,14 @@ sourceCompatibility = 1.8
 repositories {
     mavenCentral()
 }
+
 dependencies {
-    compile 'org.apache.commons:commons-lang3:3.0'
+    compile 'org.apache.commons:commons-lang3:3.4'
+
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.assertj:assertj-core:3.3.0'
+    testCompile 'com.github.stefanbirkner:system-rules:1.16.0'
+    testCompile 'org.mockito:mockito-all:2.0.2-beta'
+    testCompile 'org.powermock:powermock-core:1.6.4'
 
 }
