--- a/build.gradle
+++ b/build.gradle
@@ -16,5 +16,6 @@ dependencies {
     testCompile 'org.assertj:assertj-core:3.3.0'
     testCompile 'org.mockito:mockito-all:2.0.2-beta'
     testCompile 'org.powermock:powermock-core:1.6.4'
+    testCompile 'pl.pragmatists:JUnitParams:1.0.4'
 
 }
