--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ group 'pojo-graph'
 version '0.0.1'
 
 apply plugin: 'java'
+apply plugin: 'jacoco'
 
 sourceCompatibility = 1.8
 
@@ -17,5 +18,17 @@ dependencies {
     testCompile 'org.mockito:mockito-all:2.0.2-beta'
     testCompile 'org.powermock:powermock-core:1.6.4'
     testCompile 'pl.pragmatists:JUnitParams:1.0.4'
+}
 
+jacoco {
+    toolVersion = "0.7.1.201405082137"
+    reportsDir = file("$buildDir/reports")
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled false
+        csv.enabled false
+        html.destination "${buildDir}/reports/jacocoHtml"
+    }
 }
