--- a/build.gradle
+++ b/build.gradle
@@ -32,3 +32,7 @@ jacocoTestReport {
         html.destination "${buildDir}/reports/jacocoHtml"
     }
 }
+
+jacocoTestReport.mustRunAfter(test)
+check.dependsOn jacocoTestReport
+
